--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 
 <body>
     <!-- Nav Start-->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container inner-nav">
-            <a class="navbar-brand" href="#">Gabriel Viveros-Goldammer</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid container">
+            <a class="navbar-brand" id="logo-text" href="#">Gabriel Viveros-Goldammer</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active border-right">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">About
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item border-right">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
-                    <li class="nav-item border-right">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
@@ -41,13 +41,13 @@
     </nav>
 
     <!--Main Content Start -->
-    <main class="container container-fluid bg-white">
+    <main class="container-fluid container bg-white" id="main-padding">
         <section>
             <h2>About Me</h2>
             <hr>
             <div class="row">
                 <div class="col-md-3">
-                    <img src="/assets/images/Gabriel Fairway Picture.JPG" alt="Gabriel Viveros-Goldammer" class="w-100">
+                    <img src="assets/images/Gabriel Fairway Picture.JPG" alt="Gabriel Viveros-Goldammer" class="w-100">
                 </div>
                 <div class="col-md-9">
                     <p>I’m a creative professional with an arsenal of diverse skill sets that allow mastery over any task. As
