--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me | Gabriel Viveros-Goldammer</title>
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -25,15 +25,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">About
+                        <a class="nav-link" href="/index.html">About
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="/portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -46,10 +46,10 @@
             <h2>About Me</h2>
             <hr>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-3 col-xs-3">
                     <img src="assets/images/Gabriel Fairway Picture.JPG" alt="Gabriel Viveros-Goldammer" class="w-100">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 col-sm-9 col-xs-9">
                     <p>I’m a creative professional with an arsenal of diverse skill sets that allow mastery over any task. As
                         an enthusiast of design, marketing, software development, and technology, I’ve grown an affinity
                         to the fast paced workflows of today’s digital world.</p>
@@ -67,6 +67,13 @@
             <span class="text-muted">Copyright 2018 | Gabriel Viveros-Goldammer</span>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
